5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1836_1274.log
== TEST (2019-06-25 11:42:27) 
-- CODE:
n = input("digite um nro natural: ")
mat = zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		mat[i,j] = min(i,j) + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    mat = zeros((n,n), dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:43:06) 
-- CODE:
from numpy import *
n = input("digite um nro natural: ")
mat = zeros((n,n), dtype=int)
for i in range(n):
	for j in range(n):
		mat[i,j] = min(i,j) + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:00) 
-- CODE:
from numpy import *
N = int(input("digite um nro natural: "))
mat = zeros((N,N), dtype=int)
for i in range(n):
	for j in range(n):
		mat[i,j] = min(i,j) + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:44:12) 
-- CODE:
from numpy import *
N = int(input("digite um nro natural: "))
mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i,j] = min(i,j) + 1
print(mat)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:44:20) 
-- CODE:
from numpy import *
N = int(input("digite um nro natural: "))
mat = zeros((N,N), dtype=int)
for i in range(N):
	for j in range(N):
		mat[i,j] = min(i,j) + 1
print(mat)
-- EXECUTION TIME:
1.15069
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
